# Assignment3

Assignment3/: CMakeLists.txt  main.cpp
Assignment3/include/: BGRSclient.h  OutputReader.h  connectionHandler.h  inputReader.h  outputReader.h
Assignment3/src/: BGRSclient.cpp  OutputReader.cpp  connectionHandler.cpp  echoClient.cpp  inputReader.cpp  outputReader.cpp
